Fix #145: Track visibility can be now seen and set.

--- a/style/timeline/timeline-custom.less
+++ b/style/timeline/timeline-custom.less
@@ -43,7 +43,7 @@ div.timeline-groups-text{
         }
         
         div.content{
-            width: 122px;
+            width: 105px;
             overflow: hidden;
             white-space: nowrap;
             overflow: hidden;
@@ -76,10 +76,21 @@ div.timeline-groups-text{
             border-radius: 10px 10px 10px 10px;
         }
     }
+
+    i.visibility{
+        z-index: 4;
+        float: left;
+        margin-top: 5px;
+        margin-right: 4px;
+            
+        &:hover{
+            cursor: pointer;
+            background-color: #F66;
+            border-radius: 10px 10px 10px 10px;
+        }
+    }
    
 }
-
-
 
 div.timeline-customtime {
     z-index: 3;
@@ -166,33 +177,33 @@ div.timeline-bottom-controls{
     }
 }
 
-    div.timeline-item{
-        background-color: rgba(249, 103, 38, 0.6);
-        padding: 5px;
-        border-radius: 3px;
+div.timeline-item{
+    background-color: rgba(249, 103, 38, 0.6);
+    padding: 5px;
+    border-radius: 3px;
+    overflow: hidden;
+    
+    span{
+        float: left;
+        width: 65%;
         overflow: hidden;
-        
-        span{
-            float: left;
-            width: 65%;
-            overflow: hidden;
-        }
-        
-        i.delete{
-                float: right;
-                display: none;
-                
-                &:hover{
-                    cursor: pointer;
-                    background-color: lighten(red,20%);
-                    border-radius: 10px 10px 10px 10px;
-                }
-        }
-        
-        &:hover{
-            cursor:pointer;
-        }
     }
+    
+    i.delete{
+            float: right;
+            display: none;
+            
+            &:hover{
+                cursor: pointer;
+                background-color: lighten(red,20%);
+                border-radius: 10px 10px 10px 10px;
+            }
+    }
+    
+    &:hover{
+        cursor:pointer;
+    }
+}
 
 
 
